# AI-MJ

./: .uvignore  AI_MAHJONG_DESIGN.md  PROJECT_SUMMARY.md  README.md  UV_GUIDE.md  demo.py  hello.py  main.py  pyproject.toml  requirements.txt  test_deepseek_api.py  test_llm_config.py  test_simple.py
scripts/: dev.sh  setup.sh
src/: __init__.py  config.py
src/core/: __init__.py  action.py  meld.py  tile.py
src/engine/: __init__.py  game.py  rule_engine.py
src/player/: __init__.py  hand_analyzer.py  llm_player.py
src/services/: __init__.py  llm_api.py
src/ui/: __init__.py  console_renderer.py
src/utils/: __init__.py  constants.py
tests/: test_core.py  test_hand_analyzer.py
